scenario-5-new-regulations-mtls-everywhere/authz-resources/01-default-deny-travel-agency-access.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: prod-travel-agency
spec:
  {}
