scenario-5-new-regulations-mtls-everywhere/authz-resources/02-travel-portal-allow-external-traffic.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authpolicy-istio-ingressgateway
  namespace: prod-istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            paths: ["*"]
