scenario-5-new-regulations-mtls-everywhere/authz-resources/02-travel-portal-allow-istio-ingressgateway-traffic.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-selective-principals-travel-control
  namespace: prod-travel-control
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/prod-istio-system/sa/istio-ingressgateway-service-account"]
